# emrex-shell

./: DOCUMENTATION.md  README.md  core.py  emrex_shell  emxsh  main.py  pyproject.toml
emrex_shell/: __init__.py  __main__.py  __version__.py  core.py
emrex_shell/commands/: cd.py  clear.py  cls.py  ls.py
