[tool.poetry]
name = "emrex-shell"
version = "0.1.0"
description = "Simple Shell Simulator"
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
